--- a/styles/projects.css
+++ b/styles/projects.css
@@ -4,10 +4,10 @@
     display: inline-block;
     margin: 40px 0 20px 0;
 }
-.featured_project_main_content
+.project_content
 {
     display: inline-block;
-    background-color: orange;
+    background-color: pink;
 }
 .project_image_gallery
 {
