--- a/styles/projects.css
+++ b/styles/projects.css
@@ -45,17 +45,17 @@
 {
 	background-color: #0c0c0c;
 }
-.featured_project_description
+.project_description
 {
     width: 50%;
     float: left;
     display: table;
 }
-.featured_project_description a
+.project_description a
 {
     color: black;
 }
-.featured_project_description a:hover
+.project_description a:hover
 {
     color: #00aabb;
 }
