--- a/styles/projects.css
+++ b/styles/projects.css
@@ -84,20 +84,20 @@
     font-size: 14.5pt;
     line-height: 130%;
 }
-/*.project_description_button
+.project_description_button
 {
     font-size: 12pt;
     margin: 2% auto;
     padding: 6.5pt 15pt;
     border: 2px solid yellow;
     border-radius: 50px;
-    display: table;
-}*
+    display: inline-block;
+}
 .project_description_button:hover
 {
     border: 2px solid yellow;
     background-color: yellow;
-}*/
+}
 .featured_project_divider
 {
     width: 57%;
