--- a/styles/projects.css
+++ b/styles/projects.css
@@ -86,9 +86,9 @@
 }
 .project_description_button
 {
-    font-size: 12pt;
-    margin: 2% auto;
-    padding: 6.5pt 15pt;
+    font-size: 13.25pt;
+    margin: 0 7.5pt 0 0;
+    padding: 2.5pt 7pt;
     border: 2px solid yellow;
     border-radius: 50px;
     display: inline-block;
