--- a/styles/projects.css
+++ b/styles/projects.css
@@ -87,7 +87,7 @@
 .project_description_button
 {
     font-size: 13.25pt;
-    margin: 0 7.5pt 0 0;
+    margin: 0 7.5pt 0 2%;
     padding: 2.5pt 7pt;
     border: 2px solid yellow;
     border-radius: 50px;
