--- a/styles/index_page_style.css
+++ b/styles/index_page_style.css
@@ -26,6 +26,14 @@
            font-size: 16.5pt;
            font-weight: 600;
        }
+       #social_media_icons
+       {
+           margin-top: 13pt;
+       }
+       .social_media_icon
+       {
+           margin: 0 8pt;
+       }
     
     
     
